--- a/sentia/templates/sentia/pages/dashboard.html
+++ b/sentia/templates/sentia/pages/dashboard.html
@@ -134,7 +134,7 @@
                         <thead>
                             <tr>
                                 <th class="ps-3">Sessão</th>
-                                <th>Arquivo CSV</th>
+                                <th>Arquivo</th>
                                 <th>Data da Análise</th>
                                 <th class="text-end pe-3">Ações</th>
                             </tr>
