new: exportação para csv ou json e alteração do icone na view

--- a/sentia/templates/sentia/pages/index.html
+++ b/sentia/templates/sentia/pages/index.html
@@ -58,9 +58,9 @@
         <div class="card card-custom">
             <div class="card-header card-header-pastel text-center">
                 <h4 class="card-title-custom mb-1">
-                    <i class="fa-solid fa-robot me-2"></i>Análise de Sentimento
+                    <i class="fa-solid fa-brain me-2"></i>Análise de Sentimento
                 </h4>
-                <p class="mb-0 text-muted small">Faça o upload do seu arquivo para extrair insights valiosos.</p>
+                <p class="mb-0 text-muted small">Faça o upload do seu arquivo para extrair insights valiosos sobre a satisfação dos seus clientes.</p>
             </div>
             <div class="card-body p-4 p-md-5">
                 
