--- a/sentia/templates/sentia/base.html
+++ b/sentia/templates/sentia/base.html
@@ -54,6 +54,8 @@
     
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
+    
     {% block extra_js %}{% endblock %}
 </body>
 </html>
